changed last project title from project2 to smart brain

--- a/src/index.html
+++ b/src/index.html
@@ -216,7 +216,7 @@ If you believe what i believe and wants to work with me , Let's Go.
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">Smart Brain</h3>
                 <div>
                   <p class="mb-4">
                     This is the ZTM final Project in the Complete Web Developer. I used React,Tachyons,Css in the FrontEnd and NodeJS and Express in the backend .  
