changed name of course

--- a/src/index.html
+++ b/src/index.html
@@ -219,7 +219,7 @@ If you believe what i believe and wants to work with me , Let's Go.
                 <h3 class="project-wrapper__text-title">Smart Brain</h3>
                 <div>
                   <p class="mb-4">
-                    This is the ZTM final Project in the Complete Web Developer. I used React,Tachyons,Css in the FrontEnd and NodeJS and Express in the backend .  
+                    This is the ZTM final Project in the Complete Web Developement Course. I used React,Tachyons,Css in the FrontEnd and NodeJS and Express in the backend .  
                   </p>
                 </div>
                 <a
